Add user_initialization and video capture components interfaces

--- a/src/components/CMakeLists.txt
+++ b/src/components/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_subdirectory(locker)
 add_subdirectory(face_finder)
 add_subdirectory(config)
+add_subdirectory(video_capture)
+add_subdirectory(user_initialization)
