implement function GetIntValue to config_impl
Implmentation of ConfigException and ConfigGetIntValue method

Implement a SetIntValue method

Implement a GetStringValue method

Implement SetStringValue method

Implement Load method and add functions: ExtractSections, ExtractKeyValue

Sources redacting

Addition of each methods and class descriptions

Added const to methods

Add const to GetIntValue method

Check input strings, are they are empty or not

Add limo as submodule

Add test file and CMake file for it

Add test file and Cmake file for it

Add tuple for GetIntValue, GetStringValue, Load functions

Added cost to functions and parametors

Add makeMapaKey function and using of it in GetIntValue, GetStringValue, SetIntValue, SetStringValue functions

Add check for an epty strings in GetIntValue function

insert if functions in Save, GetIntValue, GetStringValue

check for null pointer and empty strings extractect functions

Cewrite comments and briefs. Delete class ConfigExeption

Rewrite Load brief

Rewrite funtions constructors. Set values into map in Load func.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "tools/styleguide"]
 	path = tools/styleguide
 	url = https://github.com/google/styleguide
+[submodule "3rd-party/limo"]
+	path = 3rd-party/limo
+	url = https://github.com/ddolzhenko/limo
