--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/3rd_party/Timer"]
 	path = src/3rd_party/Timer
 	url = https://github.com/LuxoftAKutsan/Timer
+[submodule "tools/styleguide"]
+	path = tools/styleguide
+	url = https://github.com/google/styleguide
