--- a/src/components/CMakeLists.txt
+++ b/src/components/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(face_finder)
 add_subdirectory(config)
 add_subdirectory(video_capture)
 add_subdirectory(user_initialization)
+add_subdirectory(user_interface)
