add tests gfor get, set and load functions

--- a/src/components/config/test/CMakeLists.txt
+++ b/src/components/config/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories(
+    include_directories(
     ${COMPONENTS_DIR}/config/include
     ${COMPONENTS_DIR}/config/impl/include
 ${CMAKE_SOURCE_DIR}/3rd-party/limo/
@@ -18,3 +18,4 @@ add_executable(config_test ${SOURCES})
 target_link_libraries(config_test ${LIBRARIES})
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/config.ini DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/   )
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/empty_config.ini DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/   )
