--- a/src/components/face_finder/CMakeLists.txt
+++ b/src/components/face_finder/CMakeLists.txt
@@ -1,11 +1,10 @@
 include_directories(
     ${COMPONENTS_DIR}/face_finder/include
-    ${COMPONENTS_DIR}/face_finder/impl/include
 )
 
 
 set(SOURCES
-    impl/src/face_finder_impl.cpp
+    src/face_finder_impl.cpp
 )
 
 add_library(face_finder ${SOURCES})
