--- a/src/components/video_capture/CMakeLists.txt
+++ b/src/components/video_capture/CMakeLists.txt
@@ -1,11 +1,10 @@
 include_directories(
     ${COMPONENTS_DIR}/video_capture/include
-    ${COMPONENTS_DIR}/video_capture/impl/include
 )
 
 
 set(SOURCES
-    impl/src/video_capture_impl.cc
+    src/video_capture_impl.cc
 )
 
 
