--- a/src/components/utils/CMakeLists.txt
+++ b/src/components/utils/CMakeLists.txt
@@ -1,14 +1,2 @@
-include_directories(
-    ${COMPONENTS_DIR}/utils/include
-    ${COMPONENTS_DIR}/utils/impl/include
-)
-
-set(SOURCES
-    impl/src/timer_impl.cc
-    impl/src/looper_timer_impl.cc
-    impl/src/notifier_impl.cc
-)
-
-add_library(utils ${SOURCES})
-
-add_subdirectory(tests)
+add_subdirectory(common)
+add_subdirectory(timer)
