Fix limo include path

--- a/src/components/utils/timer/CMakeLists.txt
+++ b/src/components/utils/timer/CMakeLists.txt
@@ -1,6 +1,7 @@
 include_directories(
     ${COMPONENTS_DIR}/utils/timer/include
     ${COMPONENTS_DIR}/utils/common/include
+    ${CMAKE_SOURCE_DIR}/tools/limo/
 )
 
 set(SOURCES
