init life cycle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(FaceRecognizer)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++14")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -pthread")
 
 cmake_minimum_required(VERSION 2.8)
 
@@ -8,31 +8,30 @@ set (COMPONENTS_DIR
     ${CMAKE_CURRENT_SOURCE_DIR}/src/components
 )
 
-
-set (SRC_LIST
-    main.cpp
-    )
-
 add_subdirectory(src/components)
 
 
 
 include_directories(
     ${COMPONENTS_DIR}/locker/include
-    ${COMPONENTS_DIR}/face_finder/include
-    ${COMPONENTS_DIR}/utils/timer/include
+    ${COMPONENTS_DIR}/life_cycle/include
+    ${COMPONENTS_DIR}/video_capture/include
+    ${COMPONENTS_DIR}/face_choose/include
     ${COMPONENTS_DIR}/utils/logger/include
 )
 
 set (LIBRARIES
+    life_cycle
     log4cplus
-    locker
-    face_finder
-    config
-    timer
-    pthread
+    face_choose
+    video_capture
     )
 
+
+
+set (SRC_LIST
+    main.cpp
+    )
 
 add_executable(${PROJECT_NAME} ${SRC_LIST})
 target_link_libraries(${PROJECT_NAME} ${LIBRARIES})
