--- a/src/components/CMakeLists.txt
+++ b/src/components/CMakeLists.txt
@@ -2,5 +2,7 @@ add_subdirectory(locker)
 add_subdirectory(face_finder)
 add_subdirectory(config)
 add_subdirectory(video_capture)
+add_subdirectory(face_choose)
+add_subdirectory(life_cycle)
 add_subdirectory(user_initialization)
 add_subdirectory(utils)
