install qtcreator in docker

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,23 +8,22 @@ RUN wget https://github.com/opencv/opencv/archive/3.4.1.tar.gz
 RUN tar -zxvf 3.4.1.tar.gz && mv opencv-3.4.1 opencv
 RUN cd opencv && mkdir build 
 WORKDIR /opt/opencv/build
-RUN cmake -D CMAKE_BUILD_TYPE=Release -D CMAKE_INSTALL_PREFIX=/usr/local ..
+RUN cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local ..
 RUN make -j2
 RUN make install
 
-
-#RUN git clone -b v19.9 --single-branch git@github.com:davisking/dlib.git
 WORKDIR /opt/
 RUN wget https://github.com/davisking/dlib/archive/v19.9.tar.gz
 RUN tar -zxvf v19.9.tar.gz && mv dlib-19.9 dlib
 RUN cd dlib && mkdir build
-WORKDIR /opt/opencv/dlib
-RUN cmake -D CMAKE_BUILD_TYPE=Release\
-          -D CMAKE_INSTALL_PREFIX=/usr/local\
-          -D USE_AVX_INSTRUCTIONS=1 ..
+RUN apt install -y libopenblas-dev liblapack-dev
+WORKDIR /opt/dlib/build
+RUN cmake -DCMAKE_BUILD_TYPE=Release\
+           -DCMAKE_INSTALL_PREFIX=/usr/local\
+           -DUSE_AVX_INSTRUCTIONS=1 ..
 RUN make -j2
 RUN make install
 
-# RUN apt install -y cmake g++ qtcreator
+RUN apt install -y qtcreator
 # RUN apt install -y libopencv-dev libdlib-dev libblas-dev liblapack-dev
 CMD ["/bin/zsh"]
